2016-04-22  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix crash when analyzing large samples (>80,000)
	* Add experimental multiple trait analysis
	* Add richer outputs for --meta score model e.g. SE(beta)
	* Add estimates for residual model (pheno~covar) in --meta score model
	* Clean codes (refactoring codes in the large-scale)
	* Update third-party libraries

2015-12-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug in meta covariance file (happens only when: unrelated individuals, has covariates, residual variance not one)
	* Improve single variant score test (--single score)
	* Add (optionally) SE for score test in meta-analysis models (e.g. --meta score[se])
	* Clean codes

2015-11-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add analytic SKAT-O model
	* Clean codes

2015-11-10  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve kinship calculation (--kinshipEigen)
	* Improve dosage supports for both autosomes and X chromosomes
	* Improve logistic regression speed in meta analysis
	* Add allelic Fisher's exact test
	* Add NumPolyVar in gene/set based tests
	* Add pre-regression checkings
	* Avoid SegFault when the data files are inaccessible
	* Clean codes

2015-10-07  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug when generating covariance matrix

2015-09-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve stability of logistic regression model
	* Clean codes
	* Revise documentation
	* Support multi-allelic sites better
	* Fix allele frequency calculations for dosages in meta models
	* Fix reset function so that results are reset each time

2015-08-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise Price's VT implementation
	* Clean up codes
	* Include zlib

2015-08-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add version checker for Linux version
	* Improve user interface by print effective commandline options
